2007-04-06  Brad Hards <bradh@users.sourceforge.net>
	* rfb/rfbclient.h: use 'extern "C"' to make it convenient to
	  include from C++.

2007-04-05  Alessandro Praduroux <pradu@pradu.it>
	* rfb/rfb.h: do not misplace guards, which makes it possible to
	  double include rfb.h from C++.

2007-03-31  Guillaume Rousse <Guillaume.Rousse@inria.fr>
	* configure.ac, **/Makefile.am: build shared libraries

2007-03-20  Karl Runge <runge@karlrunge.com>
	* libvncserver/httpd.c: Add "Connection: close" to HTTP replies.

2007-03-17  Charles Coffing  <cconffing@novell.com>
	* libvncserver: fix a locking issue

2007-02-01  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncclient: add updateRect member to rfbClient, to allow
	  requesting smaller updates than whole-screen.

2007-01-31  Karl Runge <runge@karlrunge.com>
	* libvncclient: add GotCursorShape() and GotCopyRect() hooks.
	  fix copyrect code in rfbproto.c, add copyrect to default list.
	* Makefile.am and prepare_x11vnc_dist.sh: add x11vnc dependence
	  on libvncclient.

2006-12-13  Karl Runge <runge@karlrunge.com>
	* remove stray "-permitfiletransfer  permit file transfer support"
	  print out.

2006-11-21  Karl Runge <runge@karlrunge.com>
	* configure.ac: add DPMS detection.

2006-11-13  Karl Runge <runge@karlrunge.com>
	* configure.ac: x11vnc warnings for no XTEST or SSL.
	* prepare_x11vnc_dist.sh: to 0.8.4

2006-11-07  Karl Runge <runge@karlrunge.com>
	* configure.ac: clean up -R linker case, add --without-macosx-native
	* prepare_x11vnc_dist.sh: have "make rpm" work properly for
	  x11vnc package.

2006-07-17  Karl Runge <runge@karlrunge.com>
	* configure.ac: move non-X11 tests out of HAVE_X: set  
	  SSL_LIBS and CRYPT_LIBS and some header checks.

2006-07-12  Karl Runge <runge@karlrunge.com>
	* libvncserver: release for CVE-2006-2450 fix.

2006-07-08  Karl Runge <runge@karlrunge.com>
	* configure.ac: add <linux/uinput.h> for linux console.

2006-07-04  Karl Runge <runge@karlrunge.com>