@@ -1,7 +1,7 @@
 CFLAGS=-g -Wall
 
-SUBDIRS=libvncserver examples contrib libvncclient x11vnc vncterm classes client_examples test
-DIST_SUBDIRS=libvncserver examples contrib libvncclient x11vnc vncterm classes client_examples test
+SUBDIRS=libvncserver examples contrib libvncclient vncterm classes client_examples test
+DIST_SUBDIRS=libvncserver examples contrib libvncclient vncterm classes client_examples test
 
 bin_SCRIPTS = libvncserver-config
 
@@ -11,9 +11,9 @@ includedir=$(prefix)/include/rfb
 include_HEADERS=rfb/rfb.h rfb/rfbconfig.h rfb/rfbint.h rfb/rfbproto.h \
 	rfb/keysym.h rfb/rfbregion.h rfb/rfbclient.h
 
-if HAVE_RPM
 $(PACKAGE)-$(VERSION).tar.gz: dist
 
+if HAVE_RPM
 # Rule to build RPM distribution package
 rpm: $(PACKAGE)-$(VERSION).tar.gz $(PACKAGE).spec
 	cp $(PACKAGE)-$(VERSION).tar.gz @RPMSOURCEDIR@
